# Film-Emulation

./: CMakeLists.txt  OpenDRTFilmPipeline.cpp  README.md  gamut_matrices.h  luts_embedded.h  transfer_functions.h
.github/workflows/: build-ofx.yml
